--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "LeventYumerov\\CredowebBackendTask\\": "src/"
+            "Yumerov\\CredowebBackendTask\\": "src/"
         }
     },
     "authors": [
@@ -14,5 +14,7 @@
             "email": "yumerov.levent@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^8.1"
+    }
 }
