--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,13 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "league/container": "^4.2",
+        "nikic/fast-route": "^1.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0",
+        "phpunit/php-code-coverage": "^10.0",
+        "ext-xdebug": "^3.2"
     }
 }
