--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "require": {
         "php": "^8.1",
         "league/container": "^4.2",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "illuminate/database": "^9.50"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
