--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": "^8.1",
         "league/container": "^4.2",
         "nikic/fast-route": "^1.3",
-        "illuminate/database": "^9.50"
+        "doctrine/orm": "^2.14"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
