--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "php": "^8.1",
         "league/container": "^4.2",
         "nikic/fast-route": "^1.3",
-        "doctrine/orm": "^2.14"
+        "doctrine/orm": "^2.14",
+        "symfony/cache": "^6.2",
+        "doctrine/annotations": "1.*.*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
