--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "nikic/fast-route": "^1.3",
         "doctrine/orm": "^2.14",
         "symfony/cache": "^6.2",
-        "doctrine/annotations": "1.*.*"
+        "doctrine/annotations": "1.*.*",
+        "fakerphp/faker": "^1.21"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
