--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "doctrine/orm": "^2.14",
         "symfony/cache": "^6.2",
         "doctrine/annotations": "1.*.*",
-        "fakerphp/faker": "^1.21"
+        "fakerphp/faker": "^1.21",
+        "symfony/validator": "^6.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
